@@ -111,8 +111,12 @@ sourceforge (2.6-0+13+) experimental; urgency=low
     bug_dump.php and patch_dump.php
   * [Christian] Added the supposed userIsAdmin() function in Group class
     used in bug_dump.php and patch_dump.php
+  * [Christian] Made some change in bug_dump.php and patch_dump.php to make
+    them work (partially), this need actually to manually create two views since in 2.6
+    patch and bug tables don't exist, scripts creating views are view_bug.sql and
+    view_patch.sql. 
 
- -- Christian Bayle <bayle@debian.org>  Sat,  9 Nov 2002 22:03:41 +0100
+ -- Christian Bayle <bayle@debian.org>  Sat,  9 Nov 2002 23:54:41 +0100
 
 sourceforge (2.6-0+13) experimental; urgency=low
 
